# smopsys_sv

./: .gitignore  CHANGELOG.md  MANIFEST.in  PROJECT_STRUCTURE.md  PUBLISHING.md  README.md  bimotype.sqlite3  bimotype_ternary_integration.py  datatypes.py  demo_mvp.sqlite3  main.py  psimon.py  psimon_bridge.py  pyproject.toml  requirements.txt  simon_oracle.c
.github/workflows/: publish.yml  pypi-publish.yml  test.yml
bimotype_ternary/: __init__.py  bimotype.sqlite3  gui.py  main.py  mobile_gui.py
bimotype_ternary/codegen/: c_generator.py
bimotype_ternary/core/: datatypes.py  recursive_engine.py  session_manager.py
bimotype_ternary/crypto/: __init__.py  cli.py  encryptor.py  key_derivation.py  password_generator.py  qr_transfer.py
bimotype_ternary/database/: __init__.py  manager.py  models.py
bimotype_ternary/examples/: demo.py  quickstart.py
bimotype_ternary/integration/: __init__.py  decoder.py  encoder.py  mapper.py
bimotype_ternary/network/: discovery.py  p2p.py
bimotype_ternary/tests/: test_bimotype_integration.py  test_qr_transfer.py  test_topology_encoder.py
bimotype_ternary/topology/: __init__.py  encoder.py
bimotype_ternary/utils/: psimon_bridge.py
docs/: INSTALLATION.md  METRIPLECTIC_CRYPTO.md  STRUCTURE.md
env/: pyvenv.cfg
examples/: crypto_demo.py  db_demo.py  generate_metriplectic_keys.py  metriplectic_demo.py  quickstart.py  recursive_demo.py
src_backups/: beta_decay.c  quoremind.py
tests/: test_cryptography.py  test_datatypes.py  test_db_demo.py  test_metriplectic_demo.py  test_p2p.py
