[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bimotype-ternary"
version = "1.3.0"
description = "Quantum communication protocol with radioactive signatures and topological encoding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jacobo Tlacaelel Mina Rodriguez", email = "your.email@example.com"}
]
maintainers = [
    {name = "Jacobo Tlacaelel Mina Rodriguez", email = "your.email@example.com"}
]
keywords = [
    "quantum",
    "cryptography",
    "topology",
    "nuclear-physics",
    "metriplectic",
    "ternary-encoding",
    "radioactive-signatures"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "streamlit>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psimon-h7>=2.0.0",
    "quoremind>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
psimon = [
    "psimon-h7>=2.0.0",
]
crypto = [
    "cryptography>=41.0.0",
    "click>=8.0.0",
]
all = [
    "bimotype-ternary[dev,psimon,crypto]",
]

[project.urls]
Homepage = "https://github.com/yourusername/bimotype-ternary"
Documentation = "https://bimotype-ternary.readthedocs.io"
Repository = "https://github.com/yourusername/bimotype-ternary.git"
Issues = "https://github.com/yourusername/bimotype-ternary/issues"
Changelog = "https://github.com/yourusername/bimotype-ternary/blob/main/CHANGELOG.md"

[project.scripts]
bimotype = "bimotype_ternary.main:main"
bimotype-gui = "bimotype_ternary.main:main"
bimotype-crypto = "bimotype_ternary.crypto.cli:cli"

[tool.setuptools]
packages = ["bimotype_ternary"]

[tool.setuptools.package-data]
bimotype_ternary = ["*.h"]

[tool.pytest.ini_options]
testpaths = ["bimotype_ternary/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=bimotype_ternary",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused

[tool.coverage.run]
source = ["bimotype_ternary"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
